# anki-telegram

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.github/: copilot-instructions.md
app/: __main__.py  anki_client.py  config.py  generator.py  models.py  service.py  state.py  telegram_adapter.py
tests/: conftest.py  test_anki_client.py  test_copilot_integration.py  test_generator_parsing.py  test_real_anki_client.py  test_requirements.py  test_service.py  test_service_logs.py
